pre ~ 28.01.22 @ 05:19AM | [New Content Additions] - Experience added & fixed issue with image overlapping nav menu (z-index)

--- a/main.css
+++ b/main.css
@@ -24,11 +24,6 @@ img {
   font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
 }
 
-.container {
-  border: 3px solid blue;
-  padding: 0 35px;
-}
-
 /* ! fonts */
 
 h1,
@@ -41,15 +36,12 @@ h6 { font-family: Sora, Helvetica, Arial, sans-serif; }
 h1 { font-size: 3em; }
 h2 { font-size: 2.8em; }
 h3 { font-size: 2em; }
-h4 { font-size: 1.8em; }
-h5 { font-size: 1.6em; }
-h6 { font-size: 1.4em; }
+h4 { font-size: 1.3em; }
 
 p {
   margin-bottom: 17px;
   font-family: Sora, Helvetica, Arial, sans-serif;
   font-size: 1em;
-
 }
 
 p:last-child {
@@ -71,6 +63,25 @@ a:hover {
   font-size: 1em;
 }
 
+.heading {
+  margin-bottom: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.heading i {
+  margin-right: 5px;
+  font-style: normal;
+  color: #729BAC;
+  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
+  font-size: 1.6em;
+}
+
+.heading h3 {
+  color: #B8B8B8;
+}
+
 /* emojis */
 
 .eWave::before {
@@ -82,6 +93,7 @@ a:hover {
 .fixedtop {
   position: fixed;
   top: 0;
+  z-index: 9999;
   width: 100%;
   overflow: hidden;
   background-color: #282828;
@@ -119,6 +131,7 @@ nav ul.right {
 nav a {
   text-decoration: none;
   color: #B8B8B8;
+  font-size: 0.9em;
   transition: ease 0.1s;
 }
 
@@ -146,6 +159,7 @@ nav ul>li {
 nav ul.right>li>i {
   margin-right: 3px;
   font-style: normal;
+  font-size: 0.9em;
   color: #729BAC;
 }
 
@@ -156,7 +170,7 @@ nav ul.right>li>i {
   padding: 7.5% 12%;
 }
 
-[role="doc-subtitle"] {
+.head [role="doc-subtitle"] {
   margin-bottom: 15px;
   color: #729BAC;
   font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
@@ -218,26 +232,7 @@ p.myDesc {
 /* about */
 
 .about {
-  padding: 5% 12%; 
-}
-
-.about .heading {
-  margin-bottom: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.about .heading i {
-  margin-right: 5px;
-  font-style: normal;
-  color: #729BAC;
-  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
-  font-size: 1.6em;
-}
-
-.about .heading h3 {
-  color: #B8B8B8;
+  padding: 10% 12%;
 }
 
 .about .me {
@@ -288,4 +283,52 @@ p.myDesc {
 
 .techSkills li img:hover {
   filter: brightness(180%);
+}
+
+/* experience */
+
+.experience {
+  padding: 9% 12%;
+}
+
+.experience .timeline {
+  padding: 15px 45px;
+}
+
+.experience .card {
+  border-radius: 5px;
+  margin-bottom: 45px;
+}
+
+.experience .card:first-child {
+  margin-top: 15px;
+}
+
+.experience .card:last-child {
+  margin-bottom: 0;
+}
+
+.experience .card [role="doc-subtitle"].date {
+  margin-bottom: 10px;
+  color: #707070;
+  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
+  font-size: 0.9em;
+}
+
+.experience .card h4 {
+  margin-bottom: 30px;
+  color: #B8B8B8;
+}
+
+.experience .card h4 span.stylechar {
+  color: #729BAC;
+}
+
+.experience .card h4 a {
+  color: #729BAC;
+}
+
+.experience .card ul.rolePoints {
+  list-style: ;
+  max-width: 650px;
 }
